--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,11 @@
-testing specs for recipes:
-name: string
-summary: text
-description: text
+testing specs for chefs:
+chefname: string
+email: string
 
-- name must be present
+- chefname must be present
+- chefname must be between 3 characters and less than 40characters
+- email must be present
+- email must be unique (since we'll use this for logins later)
+- email must be valid
+
+
